2007-07-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add copyright and license text.

2007-07-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix generation of required files.

2007-07-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
		Use posix_fadvise in sequential mode.

	* src/main.cpp:
		Use sequential mode when indexing.

	* src/dvbcut.cpp:
		Use sequential mode when indexing or exporting.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Use -Wall.
		Only remove ffmpeg install directories when distcleaning.

	* src/buffer.cpp:
		Disable mmap() on Windows.

	* mingw.sh:
		Use src/Makefile.w32 for everything.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		New file.

	* mingw.sh:
		Set svn:executable property.
		Use src/Makefile.w32.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	Added svn:keyword property for all files except src/*.ui
	(I don't want to confuse Qt designer).

2007-07-04  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Use _lseeki64 on Windows.
		Only seek if necessary.
		Try to read a buffer full of data.

	* src/dvbcut.cpp:
		Remember last used load directory for Open.
 
	* src/settings.cpp:
	* src/settings.h:
		Add "lastdir" setting.

2007-07-03  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Use fstat/_fstati64 to obtain the file size. This is
		required to overcome the 2 GB limit on 32-bit systems
		(Windows in particular).

	* src/defines.h:
		Better defaults for multi-file mode.

2007-07-02  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
	* src/dvbcut.cpp:
		"play multiple files" patch by Ralph Glasstetter.

2007-06-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp (class inbuffer):
	* src/buffer.h (class inbuffer):